--- a/GAS/GAS.BLL.Contracts/GAS.BLL.Contracts.csproj
+++ b/GAS/GAS.BLL.Contracts/GAS.BLL.Contracts.csproj
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IQuery.cs" />
+    <Compile Include="IDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GAS.DAL\GAS.DAL.csproj">
+      <Project>{9498e292-af2c-4be5-bb9d-d2a392494d3e}</Project>
+      <Name>GAS.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
