--- a/GAS/GAS.DAL/GAS.DAL.csproj
+++ b/GAS/GAS.DAL/GAS.DAL.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseClass.cs" />
+    <Compile Include="DataClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabClass.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
