--- a/GAS/GAS.DAL/GAS.DAL.csproj
+++ b/GAS/GAS.DAL/GAS.DAL.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="BaseClass.cs" />
     <Compile Include="DataClass.cs" />
+    <Compile Include="FileClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TabClass.cs" />
   </ItemGroup>
